<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_Main.DetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_imgDetail"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:src="@drawable/slide1"
                    android:scaleType="fitXY"/>

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/et_nameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:textSize="35sp"
                android:textColor="@android:color/white"
                android:text="@string/nama_tempatDetail"
                android:gravity="center"
                android:enabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/et_deskDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginBottom="8dp"
                android:lineSpacingMultiplier="1"
                android:textSize="14sp"
                android:text="@string/detail_deskripsi"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:enabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jdlalamat"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/et_addressDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginBottom="12dp"
                android:textSize="14sp"
                android:text="@string/alamat"
                android:textColor="@android:color/white"
                android:enabled="false"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/colorPrimary">

                    <Button
                        android:id="@+id/btn_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorPrimary"
                        android:text="@string/cari_lokasi"
                        android:textColor="@android:color/white" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>